--- a/src/sections/Hero/Hero.scss
+++ b/src/sections/Hero/Hero.scss
@@ -94,6 +94,7 @@
     }
 
     &--sub {
+      text-align: center;
       color: $text-primary;
       font-size: 1.5rem;
       font-weight: 500;
